--- a/aria-practices.html
+++ b/aria-practices.html
@@ -55,7 +55,7 @@
     <h2>Introduction</h2>
     <p>This section is <em>informative.</em></p>
     <p>
-      WAI-ARIA Authoring Practices is a guide to understanding how to use 
+      WAI-ARIA Authoring Practices is a guide to understanding how to use
       <cite><a href="https://www.w3.org/TR/wai-aria-1.1/"><abbr title="Accessible Rich Internet Applications">WAI-ARIA</abbr> 1.1</a></cite>
       to create an accessible Rich Internet Application.
       It provides guidance on appropriate application of WAI-ARIA, describes recommended WAI-ARIA usage patterns, and explains concepts behind them.
@@ -555,6 +555,70 @@
       </section>
     </section>
 
+
+    <section class="widget" id="carousel">
+      <h3>Carousel (Image Rotator)</h3>
+      <p>
+        A carousel is a widget that automatically rotates through a set of images, showing just one image at time.
+        The image often has additional related content in the form of text content and links.
+        A  <code>tablist</code> widget and a set of <code>button</code> widgets can be used to describe the carousel content, pause and restart automatic rotation and manually rotate through the images.
+        Each image is represented by a tab in the tablist, with the tabs used to control the rendering of each image.
+        In addition to the tabs and previous and next button are typically provided to provide additional ways to control the rendering of each image.
+        A button is need to stop rotation for screen reader users when they are in review mode.
+        If they move their review cursor in to the image content and it automatically rotates, the content will be removed from the accessibility API and the review cursor typically moves to the beginning of thet page, which is disorietning to users.
+        The set of controls should also be in a complementary landmark with an accessible name identifying the region as a carousel widget.
+
+      <section class="notoc">
+        <h4>Examples</h4>
+        <p><a href="examples/carousel/carousel-1.html">Carousel Example</a>: Demonstates the accessibility features of a carousel widget.</p>
+      </section>
+
+      <section class="notoc">
+        <h4>Keyboard Interaction</h4>
+        <p>For the tab list:</p>
+        <ul>
+          <li>
+            <kbd>Tab</kbd>: When focus moves into the tab list, places focus on the active <code>tab</code> element .
+            When the tab list contains the focus, moves focus to the next element in the page tab sequence outside the tablist, which is typically either the first focusable element inside the tab panel or the tab panel itself.
+          </li>
+          <li>
+            <kbd>Left Arrow</kbd>: moves focus to the previous tab (i.e. image).
+            If focus is on the first tab, moves focus to the last tab.
+            Optionally, activates the newly focused tab (See note below).
+          </li>
+          <li>
+            <kbd>Right Arrow</kbd>: Moves focus to the next tab (i.e. image).
+            If focus is on the last tab element, moves focus to the first tab.
+            Optionally, activates the newly focused tab (See note below).
+          </li>
+          <li><kbd>Home</kbd> (Optional): Moves focus to the first tab (i.e. image).</li>
+          <li><kbd>End</kbd> (Optional): Moves focus to the last tab (i.e.. image).</li>
+        </ul>
+        <p>
+      </section>
+
+      <section class="notoc">
+        <h4>WAI-ARIA Roles, States, and Properties</h4>
+        <ul>
+          <li>The checkbox has role <a href="#checkbox" class="role-reference">checkbox</a>.</li>
+          <li>
+            The checkbox has an accessible label provided by one of the following:
+            <ul>
+              <li>Visible text content contained within the element with role <code>checkbox</code>.</li>
+              <li>A visible label referenced by the value of <a href="#aria-labelledby" class="property-reference" >aria-labelledby</a> set on the element with role <code>checkbox</code>.</li>
+              <li><a href="#aria-label" class="property-reference">aria-label</a> set on the element with role <code>checkbox</code>.</li>
+            </ul>
+          </li>
+          <li>When checked, the checkbox element has state <a href="#aria-checked" class="state-reference" >aria-checked</a> set to <code>true</code>.</li>
+          <li>When not checked, it has state <a href="#aria-checked" class="state-reference" >aria-checked</a> set to <code>false</code>.</li>
+          <li>When partially checked, it has state <a href="#aria-checked" class="state-reference" >aria-checked</a> set to <code>mixed</code>.</li>
+          <li>If a set of checkboxes is presented as a logical group with a visible label, the checkboxes are included in an element with role <a href="#group" class="role-reference" >group</a> that has the property <a href="#aria-labelledby" class="property-reference" >aria-labelledby</a> set to the ID of the element containing the label.</li>
+          <li>If the presentation includes additional descriptive static text relevant to a checkbox or checkbox group, the checkbox or checkbox group has the property <a href="#aria-describedby" class="property-reference">aria-describedby</a> set to the ID of the element containing the description.</li>
+        </ul>
+      </section>
+    </section>
+
+
     <section class="widget" id="combobox">
       <h3>Combo Box</h3>
       <p>
@@ -631,7 +695,7 @@
         The options for a combobox to popup a grid, tree, or dialog were introduced in ARIA 1.1.
         Changes made in the ARIA 1.1 specification also add support for a code pattern that enables assistive technologies to present the textbox and popup as separately perceivable elements.
         both ARIA 1.0 and 1.1 patterns are described in the following sections.
-        While using the ARIA 1.1 pattern is recommended as soon as assistive technology support is sufficient, 
+        While using the ARIA 1.1 pattern is recommended as soon as assistive technology support is sufficient,
         there are no plans to deprecate the ARIA 1.0 pattern.
       </p>
 
@@ -1356,7 +1420,7 @@
           <p class="note">See <a href="#kbd_common_conventions"></a> for cut, copy, and paste key assignments.</p>
         </section>
       </section>
-      
+
       <section id="layoutGrid" class="notoc">
         <h4>Layout Grids for Grouping Widgets</h4>
 
@@ -4198,7 +4262,7 @@
       <p>
         The following example grid has a two row header.
         The first two columns have headers that span both rows of the header.
-        The subsequent 6 columns are grouped into 3 pairs with headers in the first row that each span two columns. 
+        The subsequent 6 columns are grouped into 3 pairs with headers in the first row that each span two columns.
       </p>
       <pre>
         <code>
@@ -4207,7 +4271,7 @@
             &lt;div role=&quot;rowgroup&quot;&gt;
               &lt;div role=&quot;row&quot; aria-rowindex=&quot;1&quot;&gt;
                   &lt;!--
-                    aria-rowspan and aria-colspan provide 
+                    aria-rowspan and aria-colspan provide
                     assistive technologies with the correct data cell header information
                     when header cells span more than one row or column.
                   --&gt;
@@ -4316,7 +4380,7 @@
                 &lt;th&gt;Homework 4&lt;/th&gt;
                 &lt;!--
                   aria-sort indicates the column with the heading
-                  "Quiz 2" has been used to sort the rows of the grid. 
+                  "Quiz 2" has been used to sort the rows of the grid.
                 --&gt;
                 &lt;th aria-sort=&quot;descending&quot;&gt;Quiz 2&lt;/th&gt;
                 &lt;th&gt;Homework 5&lt;/th&gt;
