Introduction section: Remove plural on presentation role
In aria-practices.html, intro section, change:
"presentation roles" to "role presentation"

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -68,7 +68,7 @@
     <p>
       After a brief <q>Read Me First</q> section, the guide begins with ARIA implementation patterns for common widgets that both enumerate expected behaviors and demonstrate those behaviors with working code.
       The implementation patterns and examples refer to detailed explanations of supporting concepts in subsequent guidance sections.
-      The guidance sections cover more general topics such as use of ARIA landmarks, practices for keyboard interfaces, grid and table properties, and the effects of the <code>presentation</code> roles.
+      The guidance sections cover more general topics such as use of ARIA landmarks, practices for keyboard interfaces, grid and table properties, and the effects of role <code>presentation</code>.
     </p>
   </section>
 
