--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1058,7 +1058,7 @@
       <h3>Disclosure (Show/Hide)</h3>
       <p>
         A disclosure is a <a href="#button">button</a> that controls visibility of a section of content.
-        When the controlled conted is hidden, it is often styled as a typical push button with a right pointing arrow or triangle to hint that activating the button will display additional content.
+        When the controlled content is hidden, it is often styled as a typical push button with a right-pointing arrow or triangle to hint that activating the button will display additional content.
         When the content is visible, the arrow or triangle typically points down.
       </p>
 
