Multi-Thumb Slider Example: Correct title attribute and strong tag
Perfeedback in issue #520, modified examples/slider/multithumb-slider.html:
1. changed the text of the title attribute on the hotel slider. to say  max is $400
2. Fixed incorrectly closed strong tag.

--- a/examples/slider/multithumb-slider.html
+++ b/examples/slider/multithumb-slider.html
@@ -19,7 +19,7 @@
   <main>
     <h1>Horizontal Multi-Thumb Slider Example</h1>
     <p>
-      <strong>NOTE:</</strong> Please provide feedback on this example page in
+      <strong>NOTE:</strong> Please provide feedback on this example page in
       <a href="https://github.com/w3c/aria-practices/issues/520">issue 520.</a>
     </p>
     <p>
@@ -49,7 +49,7 @@
                 <div class="rail-label min">
                   0
                 </div>
-                <div class="rail" style="width: 300px;" title="Select a hotel between $0 and $500">
+                <div class="rail" style="width: 300px;" title="Select a hotel price range between $0 and $400">
                   <img id="minPriceHotel"
                     src="images/min-arrow.png" 
                     role="slider" 
@@ -80,7 +80,7 @@
               <div class="rail-label min">
                 0
               </div>
-              <div class="rail" style="width: 300px;" title="Select a flight between $0 and $1000">
+              <div class="rail" style="width: 300px;" title="Select a flight price range between $0 and $1000">
                 <img src="images/min-arrow.png" 
                     role="slider" tabindex="0" 
                     class="min thumb" 
