Grid Pattern: Correct spelling: 'pater' to 'pattern'

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1258,7 +1258,7 @@
         While ARIA properties and assistive technologies use row and column nomenclature when describing and presenting the logical structure of elements with the <code>grid</code> role, using the <code>grid</code> role on an element does not necessarily imply that its visual presentation is tabular.
       </p>
 
-      <p>When presenting content that is tabular, consider the following factors when choosing between implementing this <code>grid</code> pater or the <a href="#table">table</a> pattern.</p>
+      <p>When presenting content that is tabular, consider the following factors when choosing between implementing this <code>grid</code> pattern or the <a href="#table">table</a> pattern.</p>
 
       <ul>
         <li>
