initial description of carousel

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -563,9 +563,9 @@
         The image often has additional related content in the form of text content and links.
         A  <code>tablist</code> widget and a set of <code>button</code> widgets can be used to describe the carousel content, pause and restart automatic rotation and manually rotate through the images.
         Each image is represented by a tab in the tablist, with the tabs used to control the rendering of each image.
-        In addition to the tabs and previous and next button are typically provided to provide additional ways to control the rendering of each image.
-        A button is need to stop rotation for screen reader users when they are in review mode.
-        If they move their review cursor in to the image content and it automatically rotates, the content will be removed from the accessibility API and the review cursor typically moves to the beginning of thet page, which is disorietning to users.
+        In addition to the tabs, a previous and next button are typically provided to control the rendering of each image.
+        A button is also need to stop rotation for screen reader users when they are in review mode.
+        If a screen reader user moves their review cursor into the image content and it automatically rotates, the content will be removed from the accessibility API and the review cursor typically moves to the beginning of thet page, which is disorietning to users.
         The set of controls should also be in a complementary landmark with an accessible name identifying the region as a carousel widget.
 
       <section class="notoc">
