Table Design Pattern: Correct case Mistake
Per feedback from @annabbott in issue #526, change "Each" to "each".

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2333,7 +2333,7 @@
       </p>
       <p>
         However, tables are often used to present a combination of information and interactive widgets.
-        Since a table is not a widget, Each widget contained in a table is a separate stop in the page tab sequence.
+        Since a table is not a widget, each widget contained in a table is a separate stop in the page tab sequence.
         If the number of widgets is large, replacing the table with a grid can dramatically reduce the length of the page tab sequence because a grid is a composite widget that can contain other widgets.
       </p>
       <p class="note">
