--- a/examples/treeview/treeview-1/treeview-1a.html
+++ b/examples/treeview/treeview-1/treeview-1a.html
@@ -249,8 +249,7 @@
       <section>
         <h2>Accessibility Features</h2>
         <p>
-          To make the focus indicator easier to see, expandable nodes (parent items) in the tree have a custom focus and hover styling created using CSS focus and hover classes.
-          To do this, focus, blur, mouseover, and mouseout events trigger application of classes to the <code>span</code> element that contains the visible label of the <code>treeitem</code>.
+          To make the focus indicator easier to see, nodes in the tree have a custom focus and hover styling created using CSS focus and hover pseudo-classes.
         </p>
       </section>
 
