Examples of listboxes with rearrangeable options: Add Live Region Documentation and Review Issue Link
Modified examples/listbox/listbox-rearrangeable.html to:
1. Under accessibility features, add note about live regions used to confirm completed actions.
2. Remove link to dev issue 123 and add link to review issue 468.

--- a/examples/listbox/listbox-rearrangeable.html
+++ b/examples/listbox/listbox-rearrangeable.html
@@ -21,9 +21,8 @@
   <main>
   <h1>Example Listboxes with Rearrangeable Options</h1>
   <p>
-    <strong>NOTE:</strong> This example page is incomplete; it is not ready for final review.
-    Development is tracked by
-    <a href="https://github.com/w3c/aria-practices/issues/123">issue 123.</a>
+    <strong>NOTE:</strong> Please provide feedback on this example in
+    <a href="https://github.com/w3c/aria-practices/issues/468">issue 468.</a>
   </p>
   <p>
     The following two example implementations of the
@@ -198,6 +197,7 @@ while in the second example, they may select multiple options before activating 
         </ol>
       </li>
       <li>In example 1, since there are four action buttons, a toolbar widget is used to group all the action buttons into a single tab stop.</li>
+      <li>Live regions provide confirmation of completed actions.</li>
     </ol>
   </section>
 
