bug(table): missing main opening tag

--- a/examples/table/table.html
+++ b/examples/table/table.html
@@ -15,6 +15,7 @@
 <link href="css/table.css" rel="stylesheet">
 </head>
 <body>
+  <main>
   <h1>Table Example</h1>
   <p>
     <strong>NOTE:</strong> This example page is not complete and is not yet ready for review.
