Treview Examples: Clarify Asterisk Key Documentation
Per comment from @annabbott in issue #225,
In all 4 treview example pages,
changed the key column in the keyboard table for the <kbd>*</kbd> key.
Added "(asterisk)" after the `*`.

--- a/examples/treeview/treeview-1/treeview-1a.html
+++ b/examples/treeview/treeview-1/treeview-1a.html
@@ -341,7 +341,7 @@
             </tr>
             <tr>
               <th>
-                <kbd>*</kbd>
+                <kbd>*</kbd> (asterisk)
               </th>
               <td>
                 <ul>
