--- a/examples/treeview/treeview-2/treeview-2a.html
+++ b/examples/treeview/treeview-2/treeview-2a.html
@@ -423,7 +423,7 @@
             </tr>
             <tr>
               <th>
-                <kbd>*</kbd>
+                <kbd>*</kbd> (asterisk)
               </th>
               <td>
                 <ul>
