--- a/examples/treeview/treeview-2/treeview-2b.html
+++ b/examples/treeview/treeview-2/treeview-2b.html
@@ -555,7 +555,7 @@
             </tr>
             <tr>
               <th>
-                <kbd>*</kbd>
+                <kbd>*</kbd> (asterisk)
               </th>
               <td>
                 <ul>
