Toolbar Pattern: Update Description of Example
Modified the toolbar pattern section of aria-practices.html.
Revised description of the link to the example page.
It previously stated that the toolbar example includes a link and a checkbox.
However, it does not yet contain those types of elements.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2497,7 +2497,10 @@
       </ol>
       <section class="notoc">
         <h4>Example</h4>
-        <p><a href="examples/toolbar/toolbar.html">Toolbar Example</a>: A toolbar including buttons, links, and checkboxes that uses roving tabindex to manage focus.</p>
+        <p>
+          <a href="examples/toolbar/toolbar.html">Toolbar Example</a>:
+          A toolbar that uses roving tabindex to manage focus and contains several buttons, including  a menu button.
+        </p>
       </section>
       <section class="notoc">
         <h4>Keyboard Interaction</h4>
