added alt attribute for validation purposes

--- a/examples/slider/multithumb-slider.html
+++ b/examples/slider/multithumb-slider.html
@@ -59,7 +59,8 @@
                     aria-valuenow="100"
                     aria-valuetext="$100"
                     aria-valuemax="400"
-                    aria-label="Hotel Minimum Price"/>
+                    aria-label="Hotel Minimum Price"
+                    alt=""/>
                   <img id="maxPriceHotel"
                     src="images/max-arrow.png"
                     role="slider"
@@ -69,7 +70,8 @@
                     aria-valuenow="250"
                     aria-valuenow="$250"
                     aria-valuemax="400"
-                    aria-label="Hotel Maximum Price"/>
+                    aria-label="Hotel Maximum Price"
+                    alt=""/>
                 </div>
                 <div class="rail-label max">
                   0
@@ -88,7 +90,8 @@
                     aria-valuenow="100"
                     aria-valuetext="$100"
                     aria-valuemax="250"
-                    aria-label="Flight Minimum Price">
+                    aria-label="Flight Minimum Price"
+                    alt="">
                 <img src="images/max-arrow.png"
                   role="slider"
                   tabindex="0"
@@ -97,7 +100,8 @@
                   aria-valuenow="250"
                   aria-valuenow="$250"
                   aria-valuemax="1000"
-                  aria-label="Flight Maximum Price">
+                  aria-label="Flight Maximum Price"
+                  alt="">
               </div>
               <div class="rail-label max">
                 0
