updated properties to reference img element

--- a/examples/slider/multithumb-slider.html
+++ b/examples/slider/multithumb-slider.html
@@ -175,7 +175,7 @@
             </th>
             <td></td>
             <td>
-              <code>div</code>
+              <code>img</code>
             </td>
             <td>
               <ul>
@@ -190,7 +190,7 @@
               <code>tabindex=<q>0</q></code>
             </th>
             <td>
-              <code>div</code>
+              <code>img</code>
             </td>
             <td>Includes the slider thumb in the page tab sequence.</td>
           </tr>
@@ -200,7 +200,7 @@
               <code>aria-valuemax=<q>NUMBER</q></code>
             </th>
             <td>
-              <code>div</code>
+              <code>img</code>
             </td>
             <td>Specifies the maximum value of the slider.</td>
           </tr>
@@ -210,7 +210,7 @@
               <code>aria-valuemin=<q>NUMBER</q></code>
             </th>
             <td>
-              <code>div</code>
+              <code>img</code>
             </td>
             <td>Specifies the minimum value of the slider.</td>
           </tr>
@@ -220,7 +220,7 @@
               <code>aria-valuenow=<q>NUMBER</q></code>
             </th>
             <td>
-              <code>div</code>
+              <code>img</code>
             </td>
             <td>Indicates the current value of the slider.</td>
           </tr>
@@ -230,7 +230,7 @@
               <code>aria-valuetext=<q>DOLLAR AMOUNT</q></code>
             </th>
             <td>
-              <code>div</code>
+              <code>img</code>
             </td>
             <td>Indicates the current value of the slider in dollars using the <q>$</q> character as a prefix.</td>
           </tr>
@@ -240,7 +240,7 @@
               <code>aria-label=<q>text</q></code>
             </th>
             <td>
-              <code>div</code>
+              <code>img</code>
             </td>
             <td>A label identifying the purpose of the slider, e.g., <q>Hotel Minimum Price</q>.</td>
           </tr>
