removed ALT attribute sue to worse error message form W3C validator when ALT=''

--- a/examples/slider/multithumb-slider.html
+++ b/examples/slider/multithumb-slider.html
@@ -59,8 +59,7 @@
                     aria-valuenow="100"
                     aria-valuetext="$100"
                     aria-valuemax="400"
-                    aria-label="Hotel Minimum Price"
-                    alt=""/>
+                    aria-label="Hotel Minimum Price"/>
                   <img id="maxPriceHotel"
                     src="images/max-arrow.png"
                     role="slider"
@@ -70,8 +69,7 @@
                     aria-valuenow="250"
                     aria-valuenow="$250"
                     aria-valuemax="400"
-                    aria-label="Hotel Maximum Price"
-                    alt=""/>
+                    aria-label="Hotel Maximum Price"/>
                 </div>
                 <div class="rail-label max">
                   0
@@ -90,8 +88,7 @@
                     aria-valuenow="100"
                     aria-valuetext="$100"
                     aria-valuemax="250"
-                    aria-label="Flight Minimum Price"
-                    alt="">
+                    aria-label="Flight Minimum Price">
                 <img src="images/max-arrow.png"
                   role="slider"
                   tabindex="0"
@@ -100,8 +97,7 @@
                   aria-valuenow="250"
                   aria-valuenow="$250"
                   aria-valuemax="1000"
-                  aria-label="Flight Maximum Price"
-                  alt="">
+                  aria-label="Flight Maximum Price">
               </div>
               <div class="rail-label max">
                 0
