fixed bug with aria-valuetext

--- a/examples/slider/multithumb-slider.html
+++ b/examples/slider/multithumb-slider.html
@@ -67,7 +67,7 @@
                     class="max thumb"
                     aria-valuemin="0"
                     aria-valuenow="250"
-                    aria-valuenow="$250"
+                    aria-valuetext="$250"
                     aria-valuemax="400"
                     aria-label="Hotel Maximum Price"/>
                 </div>
@@ -95,7 +95,7 @@
                   class="max thumb"
                   aria-valuemin="0"
                   aria-valuenow="250"
-                  aria-valuenow="$250"
+                  aria-valuetext="$250"
                   aria-valuemax="1000"
                   aria-label="Flight Maximum Price">
               </div>
