Grid Design Pattern: Clarify Tab Sequence Statement
Per feedback from @a11ydoer in issue #227,
modified aria-practices.html. Changed:
> Has only one focusable element in the page tab sequence.
to:
> Only one of the focusable elements contained by the grid is included in the page tab sequence.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1247,7 +1247,7 @@
 
     <section class="widget" id="grid">
       <h3>Grids : Interactive Tabular Data and Layout Containers</h3>
-
+      
       <p>
         A <a href="#grid" class="role-reference">grid</a> widget is a container that enables users to navigate the information or interactive elements it contains using directional navigation keys, such as arrow keys, <kbd>Home</kbd> , and <kbd>End</kbd>.
         As a generic container widget that offers flexible keyboard navigation, it can serve a wide variety of needs.
@@ -1263,7 +1263,7 @@
 
           <ul>
             <li>Always contains multiple focusable elements. </li>
-            <li>Has only one focusable element in the page tab sequence.</li>
+            <li>Only one of the focusable elements contained by the grid is included in the page tab sequence.</li>
             <li>Requires the author to provide code that <a href="#kbd_general_within">manages focus movement inside it</a>.</li>
           </ul>
         </li>
